# geonames-fst

./: Cargo.toml  Dockerfile  README.md  justfile
docker/: build.Dockerfile  duui.Dockerfile
lua/: communication_layer.lua
resources/: communication_layer.lua
src/: docs.rs  main.rs  search.rs  search_with_dist.rs  utils.rs
src/duui/: documentation.rs  mod.rs  process.rs
src/geonames/: data.rs  mod.rs  search.rs  search_with_dist.rs  searcher.rs  utils.rs
src/routes/: docs.rs  find.rs  fuzzy.rs  levenshtein.rs  mod.rs  regex.rs  regex_automaton.rs  starts_with.rs
