[package]
name = "geonames-fst"
version = "0.4.0"
edition = "2021"

[dependencies]
aide = { version = "0.14.1", features = [
    "axum",
    "axum-json",
    "axum-tokio",
    "macros",
    "swagger",
] }
anyhow = "1.0.96"
axum = { version = "0.8.1", features = ["macros"] }
clap = { version = "4.5.31", features = ["derive"] }
csv = "1.3.1"
fst = { version = "0.4.7", features = ["levenshtein"] }
levenshtein = "1.0.5"
regex-automata = "0.4.9"
schemars = "0.8.22"
serde = { version = "1.0.218", features = ["derive"] }
serde-aux = "4.6.0"
tokio = { version = "1.43.0", features = ["full", "macros"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[features]
default = ["geonames_routes", "duui"]
geonames_routes = []
duui = []
